syntax = "proto3";

message NoneResponse {
  string msg = 1;
}

message ImageResponse {
  int32 width = 1;
  int32 height = 2;
  int32 num_channels = 3;
  repeated float image = 4;
}
